apps/shlink/shlink-dashboard-basic-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: shlink-dashboard-auth
spec:
  basicAuth:
    secret: shlink-dashboard-basic-auth
