apps/shlink/shlink-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shlink
spec:
  selector:
    matchLabels:
      app: shlink
  replicas: 1 # You could also consider elastic scaling for this deployment
  template:
    metadata:
      labels:
        app: shlink
    spec:
      containers:
        - name: shlink
          image: shlinkio/shlink:5.1.7
          ports:
            - containerPort: 8080
