apps/shlink/shlink-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shlink-dashboard
spec:
  selector:
    app: shlink-dashboard
  type: ClusterIP
  ports:
    - name: http
      port: 8080
