apps/shlink/shlink-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shlink
spec:
  selector:
    app: shlink
  type: ClusterIP
  ports:
    - name: http
      port: 8080
