apps/shlink/shlink-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: shlink
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`link.ieeetamu.org`)
      kind: Rule
      services:
        - name: shlink
          port: 8080
      middlewares:
        - name: traefik-helper-touchicon
          namespace: traefik-helper
